# contemplationApp

./: Home.py  MULTIPAGE_GUIDE.md  README.md  SitwithIt.py  app.py  observer_app.py  pyproject.toml  requirements.txt  teachings.py
pages/: 1_◎_Sit_With_This.py  2_👁_The_Observer.py
