[project]
name = "contemplationapp"
version = "0.1.0"
description = "A contemplation suite featuring two apps: Sit With This (daily philosophical teachings) and The Observer (based on Krishnamurti's teachings)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.82.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
